add forget and resent password routes in backend also add contact us option
